# Harness-Stata

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  langgraph.json  pyproject.toml
.claude/skills/node-debugging/: SKILL.md
.github/workflows/: check.yml
docs/: PROGRESS.md  empirical-analysis-workflow.md  pitfalls.md  state.md
downloads/fixtures/01_capital_structure_roa/: data_cleaning_input.json  input_state.json  request.json
downloads/fixtures/02_digital_finance_liquidity/: data_cleaning_input.json  input_state.json  request.json
downloads/fixtures/03_fintech_bank_npl/: data_cleaning_input.json  input_state.json  request.json
scripts/: check.py  init.py  lint_custom.py
specs/: PROGRESS.md  feature_list.json
src/harness_stata/: __main__.py  cli.py  config.py  graph.py  state.py  studio.py
src/harness_stata/clients/: _mcp_interceptors.py  csmar.py  llm.py  mcp.py  stata.py
src/harness_stata/nodes/: _agent_runner.py  _stata_agent.py  _writes.py  data_cleaning.py  data_download.py  data_probe.py  descriptive_stats.py  hitl.py  model_construction.py  regression.py  requirement_analysis.py
src/harness_stata/observability/: __init__.py  _helpers.py  loader.py  models.py  registry.py  runner.py  store.py  tracer.py
src/harness_stata/prompts/: __init__.py  data_cleaning.md  data_probe.md  data_probe_fallback.md  data_probe_planning.md  data_probe_verification.md  descriptive_stats.md  model_construction.md  regression.md  requirement_analysis.md
src/harness_stata/subgraphs/: _probe_coverage.py  _probe_helpers.py  _probe_nodes.py  _probe_pipeline.py  generic_react.py  probe_subgraph.py
src/harness_stata/subgraphs/probe/: __init__.py  config.py  graph.py  pure.py  schemas.py  state.py
src/harness_stata/subgraphs/probe/nodes/: __init__.py  bulk_schema.py  coverage.py  fallback.py  planning.py  verification.py
tests/: conftest.py  test_cli.py  test_graph.py
tests/integration/: test_requirement_analysis_live.py
tests/nodes/: conftest.py  test_data_cleaning.py  test_data_download.py  test_data_probe.py  test_descriptive_stats.py  test_hitl.py  test_model_construction.py  test_regression.py  test_requirement_analysis.py  test_stata_agent.py
tests/observability/: test_fixtures.py  test_loader.py  test_registry.py  test_runner.py  test_store.py  test_tracer.py
tests/smoke/: test_model_construction_smoke.py  test_requirement_analysis_smoke.py
tests/subgraphs/: test_generic_react.py  test_probe_helpers.py  test_probe_subgraph.py
tests/subgraphs/probe/: test_probe_graph.py  test_pure.py
