[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "harness-stata"
version = "0.1.0"
description = "Web-orchestrated Stata empirical analysis agent on LangGraph."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.8",
    "langchain>=1.2.15",
    "langchain-openai>=0.3.0",
    "langsmith>=0.3.0",
    "langchain-mcp-adapters>=0.2.2,<0.3",
    "pandas>=2.2.0,<3",
    "duckdb>=1.1.0",
    "pydantic>=2.8.0",
    "typer>=0.12.0",
    "langchain-core>=1.3.0",
    "python-dotenv>=1.0.0",
    "csmar-mcp",
    "stata-executor",
    "cloudpickle>=3.1.2",
]

[tool.uv.workspace]
members = ["csmar-mcp", "stata-executor"]

[tool.uv.sources]
csmar-mcp = { workspace = true }
stata-executor = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-mock>=3.14.0",
    "langgraph-cli[inmem]>=0.3.3",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "import-linter>=2.0",
]

[project.scripts]
harness-stata = "harness_stata.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_stata"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["csmar-mcp/csmarapi"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
    "T20", # flake8-print（禁止裸 print，强制走 logging）
    "RUF", # ruff-specific
]
ignore = [
    "E501", # 行长由 formatter 处理
    # 中文 docstring/注释中的全角标点（，。；（）等）在 ruff 眼里是
    # "ambiguous" 字符；项目选择中文 docstring 约定，属预期内用法。
    "RUF001", # ambiguous character in string
    "RUF002", # ambiguous character in docstring
    "RUF003", # ambiguous character in comment
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-bugbear]
# typer 惯用在默认值位置调用 Option/Argument 以声明参数元数据。
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src/harness_stata"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"
# total=False TypedDict 入口处统一靠运行时 validate；类型层放过未必要键访问。
reportTypedDictNotRequiredAccess = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: calls real external services (LLM, MCP); skipped by default",
]
addopts = [
    "--strict-markers",
    "-x",
    "--tb=short",
]

[tool.importlinter]
root_packages = ["harness_stata"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = """[graph→subgraphs] graph.py 不得直接 import harness_stata.subgraphs——主图不感知子图存在。
Fix: 在 nodes/<concrete>.py 内通过 subgraphs/ 工厂组装子图，把编译产物暴露为节点函数；graph.py 只 import nodes 中的节点。详见 docs/empirical-analysis-workflow.md "ReAct 子图设计"。"""
type = "forbidden"
source_modules = ["harness_stata.graph"]
forbidden_modules = ["harness_stata.subgraphs"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = """[subgraphs→nodes] subgraphs/ 不得 import harness_stata.nodes——子图工厂需要保持复用性，不耦合特定节点。
Fix: 子图工厂只接收抽象参数（tools、prompt、predicates 等），不引用具体节点；调用方在 nodes/ 中传入业务数据。"""
type = "forbidden"
source_modules = ["harness_stata.subgraphs"]
forbidden_modules = ["harness_stata.nodes"]

[[tool.importlinter.contracts]]
name = """[nodes/subgraphs→packages] nodes/ 与 subgraphs/ 不得直连 csmar_mcp / stata_executor / csmarapi——必须经 MCP 协议而非绕过 client 层。
Fix: 通过 clients/csmar.py 或 clients/stata.py 提供的 contextmanager 获取 LangChain tools，再绑定给节点或 ReAct agent。详见 CLAUDE.md "项目组织架构"。"""
type = "forbidden"
source_modules = [
    "harness_stata.nodes",
    "harness_stata.subgraphs",
]
forbidden_modules = [
    "csmar_mcp",
    "stata_executor",
    "csmarapi",
]

[[tool.importlinter.contracts]]
name = """[llm-single-entry] 仅 clients/llm.py 可以 import langchain_openai / openai——LLM 客户端必须经 clients/llm.py 统一封装。
Fix: 改为 from harness_stata.clients.llm import <factory>，复用统一的 LLM 客户端构造方式。如果当前 clients/llm.py 没有覆盖你的需求，应当扩展 llm.py 而不是绕过。"""
type = "forbidden"
source_modules = ["harness_stata"]
forbidden_modules = [
    "langchain_openai",
    "openai",
]
ignore_imports = [
    "harness_stata.clients.llm -> langchain_openai",
]

[[tool.importlinter.contracts]]
name = """[layers] 分层依赖方向（高 → 低）：cli > graph > nodes > subgraphs > clients。低层不得反向 import 高层。
Fix: 检查违规导入，把共享类型/工具下沉到 state.py / config.py / prompts/（不在分层中），或抽象为独立基础模块。"""
type = "layers"
layers = [
    "harness_stata.cli",
    "harness_stata.graph",
    "harness_stata.nodes",
    "harness_stata.subgraphs",
    "harness_stata.clients",
]

[[tool.importlinter.contracts]]
name = """[probe-pure-isolation] subgraphs/probe/pure.py 不得 import langchain / langgraph——纯逻辑层必须无 LLM/编排框架依赖,这是单元清晰度的物理保证。
Fix: 把涉及 LangChain/LangGraph 的代码搬到 subgraphs/probe/nodes/ 或 subgraphs/probe/graph.py;pure.py 只放无副作用、无外部依赖的纯函数。"""
type = "forbidden"
source_modules = ["harness_stata.subgraphs.probe.pure"]
forbidden_modules = [
    "langchain",
    "langchain_core",
    "langgraph",
]
